# odoc

./: .gitignore  404.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_docs.yml
api/ai_doc_generator/: index.html
api/analyzer/: index.html
api/generator/: index.html
api/main/: index.html
api/utils/: index.html
search/: search_index.json
src/odoc/: utils.py
src/odocxify/: ai_doc_generator.py  analyzer.py  generator.py  main.py
templates/default/: api_page.md.j2
