[tool.poetry]
name = "odoc"
version = "0.1.0"
description = ""
authors = ["Shridhar Mandrekar <shridharmandrekar118@gmail.com>"]
readme = "README.md"
packages = [{include = "odoc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.6"
python-dotenv = "^1.1.1"
google-generativeai = "^0.8.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mkdocs-awesome-pages-plugin = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- ADD THIS SECTION ---
[tool.poetry.scripts]
odoc = "odoc.main:app"

[tool.odoc]
exclude = [
    "tests/*",
    "ai_test.py"
]
